--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -20,4 +20,8 @@ http {
 
     include conf.d/*.conf;
     include sites-enabled/*.conf;
+
+    fastcgi_buffers 16 32k;
+    fastcgi_buffer_size 64k;
+    fastcgi_busy_buffers_size 64k;
 }
