--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -24,4 +24,6 @@ http {
     fastcgi_buffers 16 32k;
     fastcgi_buffer_size 64k;
     fastcgi_busy_buffers_size 64k;
+    fastcgi_read_timeout 600s;
+    fastcgi_connect_timeout 600s;
 }
