--- a/config/php/conf.d/php.ini
+++ b/config/php/conf.d/php.ini
@@ -5,10 +5,12 @@ expose_php = Off
 ; limits
 max_input_time = 60
 max_execution_time = 60
-memory_limit = 3000M
+memory_limit = 5000M
 upload_max_filesize = 128M
 post_max_size = 128M
 max_input_vars = 5000
+realpath_cache_size=10M
+realpath_cache_ttl=7200
 
 ; mail
 mail.add_x_header = Off
